[package]
name = "rjwt"
version = "0.1.0"
edition = "2021"
description = "JWT Security Analysis Tool"

[[bin]]
name = "rjwt"
path = "src/main.rs"

[lib]
name = "rjwt"
path = "src/lib.rs"

[dependencies]
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
clap = { version = "=4.1.14", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
