[package]
name = "rjwt"
version = "1.0.0"
edition = "2024"
description = "JWT Security Analysis Tool"

[[bin]]
name = "rjwt"
path = "src/main.rs"

[lib]
name = "rjwt"
path = "src/lib.rs"

[dependencies]
base64 = "^0.22.1"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.150"
hmac = "^0.13.0"
sha2 = "^0.11.0"
sha1 = "^0.11.0"
hex = "^0.4.3"
clap = { version = "^4.6.1", features = ["derive"] }
tokio = { version = "^1.52.3", features = ["full"] }
axum = "^0.8.9"
reqwest = { version = "^0.13.4", features = ["json", "blocking", "rustls"], default-features = false }
tower = "^0.5.3"
tower-http = { version = "^0.6.11", features = ["cors"] }
anyhow = "^1.0.102"
thiserror = "^2.0.18"
colored = "^3.1.1"
rayon = "^1.12.0"
chrono = { version = "^0.4.44", features = ["serde"] }
